[gd_scene load_steps=2 format=3 uid="uid://reclamation_panel_uid"]

[ext_resource type="Script" path="res://scripts/ReclamationPanel.gd" id="1_script"]

[node name="ReclamationPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 360.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "开垦新井田"
horizontal_alignment = 1

[node name="RankLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 360.0
offset_bottom = 75.0
text = "当前爵位: 下士"
horizontal_alignment = 1

[node name="FieldsLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 360.0
offset_bottom = 105.0
text = "井田数量: 1 / 1"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 110.0
offset_right = 360.0
offset_bottom = 180.0
text = "开垦消耗:
铜钱: 100
粮食: 50
门客工时: 3天"
horizontal_alignment = 1

[node name="ReclaimButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 190.0
offset_right = 180.0
offset_bottom = 230.0
text = "开垦新井田"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 200.0
offset_top = 190.0
offset_right = 360.0
offset_bottom = 230.0
text = "关闭"

[node name="InfoLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 240.0
offset_right = 360.0
offset_bottom = 260.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "点击地图选择开垦位置"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ValidityLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 265.0
offset_right = 360.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 14
text = "✓ 此处可以开垦"
horizontal_alignment = 1
